--- a/public/index.html
+++ b/public/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="https://img.icons8.com/cute-clipart/64/osu--v2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Easy Web Request – Request your favorite osu! maps with ease" />
-    <title>EWR - Request bot</title>
+    <meta name="description" content="BeatSync – Request your favorite osu! maps with ease" />
+    <title>BeatSync - Request bot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
